@@ -1,3 +1,10 @@
+2000-08-21  David Gravereaux <davygrvy@ajubasolutions.com>
+
+	* generic/threadCmds.c (Thread_Init): Added logic to enable
+	thread::join and thread::transfer when loaded into an 8.4+ core.
+	We don't don't want a seg fault when the Stubs tables don't
+	match.
+
 2000-08-23  Brent Welch <welch@ajubasolutions.com>
 
 	* configure.in: Changed to version 2.1
@@ -5,7 +12,6 @@
 	conditional using #ifdef.  Tested with 8.3.2
 	* Applied thread-2-1 tag for use with tclhttpd bundled release.
 
-	* doc/thread.tmml(new): Initial TMML document.
 2000-08-21  David Gravereaux <davygrvy@ajubasolutions.com>
 
 	* win/vc/makefile.vc:
